infra/k8s/access-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: access-service
spec:
  selector:
    app: access-service
  ports:
    - name: grpc
      port: 8443
      targetPort: 8443
